added media query

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   font-family: "Roboto Mono", monospace;
   -webkit-font-smoothing: antialiased;
